--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       licn: "Driving_Licence.jpg",
       pan: "PAN_Card.jpg",
       voter: "Voter_Card.jpg",
-      nid: "National_ID.jpg"
+      nid: "National_ID.png"
     };
 
     let currentOption = '';
