--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     // Image URLs (placeholders)
     const images = {
       citizenship: "images/citizenship.jpg",
-      passport: "images/National_ID.png",
+      passport: "images/National_ID.jpg",
       kukl: "https://via.placeholder.com/300x200?text=KUKL+Bill",
       nead: "https://via.placeholder.com/300x200?text=NEA-Dhalachhen",
       neag: "https://via.placeholder.com/300x200?text=NEA-Gwarko",
@@ -248,7 +248,7 @@
       licn: "Driving_Licence.jpg",
       pan: "PAN_Card.jpg",
       voter: "Voter_Card.jpg",
-      nid: "National_ID.png"
+      nid: "National_ID.jpg"
     };
 
     let currentOption = '';
