--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     // Image URLs (placeholders)
     const images = {
       citizenship: "images/citizenship.jpg",
-      passport: "images/National_ID.jpg",
+      passport: "images/nationalid.jpg",
       kukl: "https://via.placeholder.com/300x200?text=KUKL+Bill",
       nead: "https://via.placeholder.com/300x200?text=NEA-Dhalachhen",
       neag: "https://via.placeholder.com/300x200?text=NEA-Gwarko",
