--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     // Image URLs (placeholders)
     const images = {
       citizenship: "images/citizenship.jpg",
-      passport: "images/nationalid.jpg",
+      passport: "images/passport.jpg",
       kukl: "https://via.placeholder.com/300x200?text=KUKL+Bill",
       nead: "https://via.placeholder.com/300x200?text=NEA-Dhalachhen",
       neag: "https://via.placeholder.com/300x200?text=NEA-Gwarko",
@@ -231,7 +231,7 @@
       licn: "https://via.placeholder.com/300x200?text=Driving+Licence",
       pan: "https://via.placeholder.com/300x200?text=PAN+Card",
       voter: "https://via.placeholder.com/300x200?text=Voter+ID",
-      nid: "https://via.placeholder.com/300x200?text=National+ID"
+      nid: "images/nationalid.jpg"
     };
 
     // Friendly names for download filenames
