--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       gime: "https://via.placeholder.com/300x200?text=Global+IME+Bank",
       nab: "https://via.placeholder.com/300x200?text=Nabil+Bank",
       stck: "https://via.placeholder.com/300x200?text=Share+Certificate",
-      licn: "https://via.placeholder.com/300x200?text=Driving+Licence",
+      licn: "images/License.png",
       pan: "https://via.placeholder.com/300x200?text=PAN+Card",
       voter: "https://via.placeholder.com/300x200?text=Voter+ID",
       nid: "images/nationalid.jpg"
@@ -245,7 +245,7 @@
       gime: "Global_IME_Bank.jpg",
       nab: "Nabil_Bank.jpg",
       stck: "Share_Stock.jpg",
-      licn: "Driving_Licence.jpg",
+      licn: "Driving_Licence.png",
       pan: "PAN_Card.jpg",
       voter: "Voter_Card.jpg",
       nid: "nationalid.jpg"
