--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       stck: "https://via.placeholder.com/300x200?text=Share+Certificate",
       licn: "images/License.png",
       pan: "https://via.placeholder.com/300x200?text=PAN+Card",
-      voter: "https://via.placeholder.com/300x200?text=Voter+ID",
+      voter: "images/votercard.jpg",
       nid: "images/nationalid.jpg"
     };
 
