--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       kukl: "https://via.placeholder.com/300x200?text=KUKL+Bill",
       nead: "https://via.placeholder.com/300x200?text=NEA-Dhalachhen",
       neag: "https://via.placeholder.com/300x200?text=NEA-Gwarko",
-      laxb: "https://via.placeholder.com/300x200?text=Laxmi+Sunrise+Bank",
+      laxb: "images/creditcard.jpg",
       gime: "https://via.placeholder.com/300x200?text=Global+IME+Bank",
       nab: "https://via.placeholder.com/300x200?text=Nabil+Bank",
       stck: "https://via.placeholder.com/300x200?text=Share+Certificate",
