--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       gime: "https://via.placeholder.com/300x200?text=Global+IME+Bank",
       nab: "https://via.placeholder.com/300x200?text=Nabil+Bank",
       stck: "https://via.placeholder.com/300x200?text=Share+Certificate",
-      licn: "images/License.png",
+      licn: "images/License.png", "images/License.png",
       pan: "https://via.placeholder.com/300x200?text=PAN+Card",
       voter: "images/votercard.jpg",
       nid: "images/nationalid.jpg"
