Update Nabil Bank image source in index.html

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       neag: "https://via.placeholder.com/300x200?text=NEA-Gwarko",
       laxb: "images/creditcard.jpg",
       gime: "https://via.placeholder.com/300x200?text=Global+IME+Bank",
-      nab: "https://via.placeholder.com/300x200?text=Nabil+Bank",
+      nab: "images/nabil_cc.jpg",
       stck: "https://via.placeholder.com/300x200?text=Share+Certificate",
       licn: "images/License.png", 
       pan: "https://via.placeholder.com/300x200?text=PAN+Card",
