--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       neag: "https://via.placeholder.com/300x200?text=NEA-Gwarko",
       laxb: "images/creditcard.jpg",
       gime: "https://via.placeholder.com/300x200?text=Global+IME+Bank",
-      nab: "images/nabil_cc.jpg",
+      nab: "images/Nabil_cc.jpg",
       stck: "https://via.placeholder.com/300x200?text=Share+Certificate",
       licn: "images/License.png", 
       pan: "https://via.placeholder.com/300x200?text=PAN+Card",
@@ -243,7 +243,7 @@
       neag: "NEA_Gwarko.jpg",
       laxb: "Laxmi_Sunrise_Bank.jpg",
       gime: "Global_IME_Bank.jpg",
-      nab: "Nabil_Bank.jpg",
+      nab: "Nabil_Credit.jpg",
       stck: "Share_Stock.jpg",
       licn: "Driving_Licence.png",
       pan: "PAN_Card.jpg",
