--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     // Image URLs (placeholders)
     const images = {
-      citizenship: "images/citizenship.jpg",
+      citizenship: ["images/citizenship.jpg", "images/citizenship.jpg"],
       passport: "images/passport.jpg",
       kukl: "https://via.placeholder.com/300x200?text=KUKL+Bill",
       nead: "https://via.placeholder.com/300x200?text=NEA-Dhalachhen",
