--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
       <option value="pan">PAN Card</option>
       <option value="voter">Voter Card</option>
       <option value="nid">National ID</option>
+      <option value="cwmlk">Cow Milk Payment</option>
     </select>
   </div>
 
@@ -212,7 +213,8 @@
       licn: `<h3>Licence Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>01-06-01003951</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>18-01-2022</p><p style="display: flex; justify-content: space-between;"><strong>Expiry Date:-</strong>17-01-2027</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>DoTM</p>`,
       pan: `<h3>PAN Card Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>111677845</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>2076-04-02 B.S.</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>Inland Revenue Department</p>`,
       voter: `<h3>Voter Card Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>09954740</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>2065-04-15 B.S.</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>CDO, Lalitpur</p>`,
-      nid: `<h3>National ID Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>746-461-485-4</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>N/A</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>N/A</p>`
+      nid: `<h3>National ID Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>746-461-485-4</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>N/A</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>N/A</p>`,
+      cwmlk: `<h3>Cow Milk Payment</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>746-461-485-4</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>N/A</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>N/A</p>`
     };
 
     // Image URLs (now arrays; ensure NO leading/trailing spaces!)
@@ -229,7 +231,8 @@
       licn: ["images/License.png"],
       pan: ["https://via.placeholder.com/300x200?text=PAN+Front", "https://via.placeholder.com/300x200?text=PAN+Back"],
       voter: ["images/votercard.jpg"],
-      nid: ["images/nationalid.jpg"]
+      nid: ["images/nationalid.jpg"],
+      cwmlk: ["images/cwmlk.jpg"]
     };
 
     // File names for download (arrays matching images)
@@ -246,7 +249,8 @@
       licn: ["Driving_Licence.png"],
       pan: ["PAN_Front.jpg", "PAN_Back.jpg"],
       voter: ["Voter_Card.jpg"],
-      nid: ["National_ID.jpg"]
+      nid: ["National_ID.jpg"],
+      cwmlk: ["cwmlk.jpg"]
     };
 
     let currentOption = '';
