--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       licn: ["images/License.png"],
       pan: ["https://via.placeholder.com/300x200?text=PAN+Front", "https://via.placeholder.com/300x200?text=PAN+Back"],
       voter: ["images/votercard.jpg"],
-      nid: ["images/nationalid.jpg"],
+      nid: ["images/nationalid.jpg", "images/nid_regist.jpg"],
       cwmlk: ["images/cwmlk.jpg"]
     };
 
@@ -249,7 +249,7 @@
       licn: ["Driving_Licence.png"],
       pan: ["PAN_Front.jpg", "PAN_Back.jpg"],
       voter: ["Voter_Card.jpg"],
-      nid: ["National_ID.jpg"],
+      nid: ["National_ID.jpg", "nid_regist.jpg"],
       cwmlk: ["cwmlk.jpg"]
     };
 
