--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       pan: `<h3>PAN Card Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>111677845</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>2076-04-02 B.S.</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>Inland Revenue Department</p>`,
       voter: `<h3>Voter Card Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>09954740</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>2065-04-15 B.S.</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>CDO, Lalitpur</p>`,
       nid: `<h3>National ID Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>746-461-485-4</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>N/A</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>N/A</p>`,
-      cwmlk: `<h3>Cow Milk Payment</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>746-461-485-4</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>N/A</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>N/A</p>`
+      cwmlk: `<h3>Cow Milk Payment</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Mobile Number:-</strong>9766886536</p><p style="display: flex; justify-content: space-between;"><strong>Name:-</strong>Rupa Dahal</p><p style="display: flex; justify-content: space-between;"><strong>Start Date:-</strong>2082</p>`
     };
 
     // Image URLs (now arrays; ensure NO leading/trailing spaces!)
@@ -225,7 +225,7 @@
       nead: ["https://via.placeholder.com/300x200?text=NEA-Dhalachhen"],
       neag: ["https://via.placeholder.com/300x200?text=NEA-Gwarko"],
       laxb: ["images/creditcard.jpg"],
-      gime: ["https://via.placeholder.com/300x200?text=Global+IME+Bank"],
+      gime: ["images/gime.jpg"],
       nab: ["images/Nabil_cc.jpg"],
       stck: ["https://via.placeholder.com/300x200?text=Share+Certificate"],
       licn: ["images/License.png"],
