--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     // Image URLs (now arrays; ensure NO leading/trailing spaces!)
     const images = {
-      citizenship: ["images/citizenship.jpg", "images/citizenship_back.jpg"],
+      citizenship: ["images/citizenship.jpg", "images/citizenship_back.jpg", "images/Nabil_cc.jpg"],
       passport: ["images/passport.jpg", "images/passport_visa.jpg"],
       kukl: ["https://via.placeholder.com/300x200?text=KUKL+Bill"],
       nead: ["https://via.placeholder.com/300x200?text=NEA-Dhalachhen"],
@@ -237,7 +237,7 @@
 
     // File names for download (arrays matching images)
     const fileNames = {
-      citizenship: ["Citizenship_Front.jpg", "Citizenship_Back.jpg"],
+      citizenship: ["Citizenship_Front.jpg", "Citizenship_Back.jpg", "images/Nabil_cc.jpg"],
       passport: ["Passport.jpg", "Passport_Visa.jpg"],
       kukl: ["KUKL_Bill.jpg"],
       nead: ["NEA_Dhalachhen.jpg"],
