Update image paths for PAN card in index.html

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       nab: ["images/Nabil_cc.jpg"],
       stck: ["https://via.placeholder.com/300x200?text=Share+Certificate"],
       licn: ["images/License.png"],
-      pan: ["https://via.placeholder.com/300x200?text=PAN+Front", "https://via.placeholder.com/300x200?text=PAN+Back"],
+      pan: ["images/PAN Card.jpg"],
       voter: ["images/votercard.jpg"],
       nid: ["images/nationalid.jpg", "images/nid_regist.jpg"],
       cwmlk: ["images/cwmlk.jpg"]
@@ -247,7 +247,7 @@
       nab: ["Nabil_Credit.jpg"],
       stck: ["Share_Stock.jpg"],
       licn: ["Driving_Licence.png"],
-      pan: ["PAN_Front.jpg", "PAN_Back.jpg"],
+      pan: ["PAN_Card.jpg"],
       voter: ["Voter_Card.jpg"],
       nid: ["National_ID.jpg", "nid_regist.jpg"],
       cwmlk: ["cwmlk.jpg"]
