Add QR_sunrise.jpg to laxb images array

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       kukl: ["https://via.placeholder.com/300x200?text=KUKL+Bill"],
       nead: ["https://via.placeholder.com/300x200?text=NEA-Dhalachhen"],
       neag: ["https://via.placeholder.com/300x200?text=NEA-Gwarko"],
-      laxb: ["images/creditcard.jpg"],
+      laxb: ["images/creditcard.jpg", "images/QR_sunrise.jpg"],
       gime: ["images/gime.jpg"],
       nab: ["images/Nabil_cc.jpg"],
       stck: ["https://via.placeholder.com/300x200?text=Share+Certificate"],
