--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
       <option value="voter">Voter Card</option>
       <option value="nid">National ID</option>
       <option value="cwmlk">Cow Milk Payment</option>
+      <option value="marcerti">Marriage Certificate</option>
     </select>
   </div>
 
@@ -214,7 +215,10 @@
       pan: `<h3>PAN Card Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>111677845</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>2076-04-02 B.S.</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>Inland Revenue Department</p>`,
       voter: `<h3>Voter Card Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>09954740</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>2065-04-15 B.S.</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>CDO, Lalitpur</p>`,
       nid: `<h3>National ID Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Number:-</strong>746-461-485-4</p><p style="display: flex; justify-content: space-between;"><strong>Issued Date:-</strong>N/A</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>N/A</p>`,
-      cwmlk: `<h3>Cow Milk Payment</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Mobile Number:-</strong>9766886536</p><p style="display: flex; justify-content: space-between;"><strong>Name:-</strong>Rupa Dahal</p><p style="display: flex; justify-content: space-between;"><strong>Start Date:-</strong>2082</p>`
+      cwmlk: `<h3>Cow Milk Payment</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Mobile Number:-</strong>9766886536</p><p style="display: flex; justify-content: space-between;"><strong>Name:-</strong>Rupa Dahal</p><p style="display: flex; justify-content: space-between;"><strong>Start Date:-</strong>2082</p>`,
+      marcerti: `<h3>Marriage Certificate Details</h3><hr><p style="display: flex; justify-content: space-between;"><strong>Regd. Number:-</strong>2047081401787-2044101901409-4</p><p style="display: flex; justify-content: space-between;"><strong>Registered Date:-</strong>2077-10-14 B.S.</p><p style="display: flex; justify-content: space-between;"><strong>Issued By:-</strong>Office of Local Registrar, Lalitpur</p>`
+
+    
     };
 
     // Image URLs (now arrays; ensure NO leading/trailing spaces!)
@@ -232,7 +236,8 @@
       pan: ["images/PAN Card.jpg"],
       voter: ["images/votercard.jpg"],
       nid: ["images/nationalid.jpg", "images/nid_regist.jpg"],
-      cwmlk: ["images/cwmlk.jpg"]
+      cwmlk: ["images/cwmlk.jpg"],
+      marcerti: ["images/marriage certificate.jpg"]
     };
 
     // File names for download (arrays matching images)
@@ -250,7 +255,8 @@
       pan: ["PAN_Card.jpg"],
       voter: ["Voter_Card.jpg"],
       nid: ["National_ID.jpg", "nid_regist.jpg"],
-      cwmlk: ["cwmlk.jpg"]
+      cwmlk: ["cwmlk.jpg"],
+      marcerti: ["images/marriage_certificate.jpg"]
     };
 
     let currentOption = '';
